--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,24 +7,46 @@
     <style>
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            max-width: 1000px;
-            margin: 20px auto;
-            padding: 20px;
+            margin: 0;
+            padding: 0;
             background-color: #f8f9fa;
             color: #333;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
+        #gateways-container {
+            width: 100%;
+            max-width: 1200px;
+            padding: 0 20px;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .gateway-card {
+            width: 100%;
+            max-width: 1000px;
+            background-color: white;
+            border-radius: 8px;
+            padding: 30px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            border: 1px solid #e9ecef;
+            box-sizing: border-box;
+        }
+
         h1 {
             text-align: center;
             color: #007bff;
-            margin-bottom: 30px;
-        }
-        .gateway-card, .server-kit-card {
-            background-color: white;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-            border: 1px solid #e9ecef;
+            margin: 40px 0;
+            width: 100%;
+            max-width: 1200px;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
         .gateway-header, .server-kit-header, .server-header, .tool-item {
             display: flex;
